--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@
 name: Build and Push Golang Image to AWS ECR
 on:
   push:
-    branches: [ main ]
+    branches: [ master ]
 jobs:
   build-and-push:
     name: Build and Push to ECR
@@ -31,7 +31,7 @@ jobs:
       id: build-image
       env:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-        ECR_REPOSITORY: git2docker
+        ECR_REPOSITORY: ds-exam
         IMAGE_TAG: ${{ steps.increment-git-tag.outputs.git-tag }}
       run: |
         docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
